2007-05-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_private.[ch] (rb_cairo__const_get,
	Init_cairo_private): added.
	* src/rb_cairo.c: moved Init_* declarations to rb_cairo_private.h.
	* src/rb_cairo_constants.c: supported abbrev notation for constant
	name. We can write just like
	  context.antialias = :none
	instead of
	  context.antialias = Cairo::ANTIALIAS_NONE

	* src/lib/cairo.rb (Cairo.normalize_const_name): added.
	* src/lib/cairo/color.rb: used Cairo.normalize_const_name.

2007-04-30  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/context.rb, src/lib/cairo/context/quad.rb: moved
	quadratic Bézier curve support to ...
	* src/rb_cairo_context.c: ... here.

	* src/lib/cairo/context/path.rb
	(Cairo::Context::Path#map_path_onto): fixed a boundary value bug.

2007-04-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rb_cairo_context.c (Cairo::Context#stroke,
	Cairo::Context#fill, Cairo::Context#clip): accept 'prserve' option
	to change XXX and XXX_preserve.
	* src/lib/cairo/context.rb (Cairo::Context#stroke_preserve,
	Cairo::Context#fill_preserve, Cairo::Context#clip_preserve): moved
	from src/rb_cairo_context.c.

2007-04-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/color.rb (Cairo::Color.parse):
	- supported :hsv and :hsva.
	- added robust parse mode.

	* samples/blur.rb: used convenience interface of Cairo::ImageSurface.new.

	* src/lib/cairo/color.rb: supported HSV.

2007-04-16  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/cairo/color.rb, src/lib/cairo/pattern.rb,
	src/lib/cairo/context/color.rb, src/rb_cairo_pattern.c: improved
	Cairo::Color interface.

	* sample/: used Cairo::Color.

	* src/lib/cairo/color.rb: added validation.

	* misc/update-colors.rb: supported X11 color names.
	* src/lib/cairo/colors.rb: updated.

	* misc/update-colors.rb: added colors.rb generator that extracts
	popular colors from Wikipedia:List_of_colors page.

	* src/lib/cairo/colors.rb: added popular colors generated by
	updated-colors.rb.
